# docs/swagger.json
@@ -110,6 +110,26 @@
                         "in": "formData"
                     },
                     {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Genres",
+                        "name": "genres",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Casts",
+                        "name": "casts",
+                        "in": "formData"
+                    },
+                    {
                         "type": "file",
                         "description": "Poster file",
                         "name": "poster",
@@ -289,6 +309,26 @@
                         "type": "string",
                         "description": "Duration (e.g. 02:28)",
                         "name": "duration",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Genres",
+                        "name": "genres",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Casts",
+                        "name": "casts",
                         "in": "formData"
                     },
                     {
@@ -1013,6 +1053,12 @@
                 "background_poster": {
                     "type": "string"
                 },
+                "casts": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1022,6 +1068,12 @@
                 "duration": {
                     "description": "untuk response JSON",
                     "type": "string"
+                },
+                "genres": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "id": {
                     "type": "integer"
